# sdk-py

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
konfidant/: __init__.py  client.py  errors.py  types.py
tests/: test_client.py
