[tool.poetry]
name = "konfidant"
version = "0.1.0"
description = "Python SDK for the Konfidant API"
license = "MIT"
packages = [{ include = "konfidant" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
respx = "^0.21"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
