[tool.poetry]
name = "konfidant"
version = "0.4.0"
description = "Python SDK for the Konfidant API"
license = "MIT"
packages = [{ include = "konfidant" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
respx = "^0.23"
pytest-cov = "^7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project]
name = "konfidant"
version = "0.4.0"
authors = [
  { name="Konfidant", email="hello@konfidant.app" },
]

description = "Konfidant.app Python SDK"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/konfidant/sdk-py"
Issues = "https://github.com/konfidant/sdk-py/issues"
